src/Components/Portfolio/PortfolioWindow.scss
a {
  text-decoration: none;
}

span {
  line-height: 9px;
  vertical-align: 50%;
}

header {
  margin: auto;
  width: 50%;
  justify-content: center;
}

.window {
  background: #fff;
  width: 25vw;
  height: 27vh;
  margin: 3em;
  margin-top: 3vh;
  border: 1px solid #acacac;
  border-radius: 6px;
  box-shadow: 0px 0px 20px #acacac;
  will-change: transform;
}

.overlay {
  transition: 0.5s ease;
  opacity: 0;
  position: absolute;
  top: 0%;
  left: 0%;
  right: 0;
  bottom: 0%;
  height: 24vh;
  // transform: translate(-50%, -50%);
  // -ms-transform: translate(-50%, -50%);
  text-align: center;
  background-color: #2f2f2f;
}

.content {
  opacity: 1;
  display: block;
  width: 100%;
  height: 24vh;
  transition: 0.5s ease;
  backface-visibility: hidden;
  position: relative;
  top: 0;
  left: 0;
  bottom: 0;
}

.content:hover .image {
  opacity: 0.3;
}

.content:hover .overlay {
  opacity: 0.6;
}

.tech-pills-container {
  position: relative;

  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-content: center;
}

.tech-pill {
  background-color: #f7f7f7;
  border: solid 5px;
  border-color: aqua;
  padding: 5px;
  margin: 10px;
  font-size: 0.8em;
}

.titlebar {
  background: -webkit-gradient(
    to left,
    color-stop(0, #ebebeb, color-stop(1, #d5d5d5))
  );
  background: -webkit-linear-gradient(top, #ddd, #d5d5d5);
  background: -moz-linear-gradient(top, #ddd, #d5d5d5);
  background: -ms-linear-gradient(top, #ddd, #d5d5d5);
  background: -o-linear-gradient(top, #ddd, #d5d5d5);
  background: linear-gradient(top, #ddd, #d5d5d5);
  background-color: #ddd;
  width: 100%;
  color: #6a6a6a;
  font-size: 11pt;
  line-height: 20px;
  text-align: center;
  width: 100%;
  height: 20px;
  border-top: 1px solid #f3f1f3;
  border-bottom: 1px solid #b1aeb1;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  cursor: default;
}

.buttons {
  padding-left: 8px;
  padding-top: 3px;
  float: left;
  line-height: 0px;
}

.buttons:hover a {
  visibility: visible;
}

.close {
  background: #ff5c5c;
  font-size: 9pt;
  width: 11px;
  height: 11px;
  border: 1px solid #e33e41;
  border-radius: 50%;
  display: inline-block;
}

.close:active {
  background: #c14645;
  border: 1px solid #b03537;
}

.close:active .closebutton {
  color: #4e0002;
}

.closebutton {
  color: #820005;
  visibility: hidden;
  cursor: default;
}

.minimize {
  background: #ffbd4c;
  font-size: 9pt;
  line-height: 11px;
  margin-left: 4px;
  width: 11px;
  height: 11px;
  border: 1px solid #e09e3e;
  border-radius: 50%;
  display: inline-block;
}

.minimize:active {
  background: #c08e38;
  border: 1px solid #af7c33;
}

.minimize:active .minimizebutton {
  color: #5a2607;
}

.minimizebutton {
  color: #9a5518;
  visibility: hidden;
  cursor: default;
}

.zoom {
  background: #00ca56;
  font-size: 9pt;
  line-height: 11px;
  margin-left: 6px;
  width: 11px;
  height: 11px;
  border: 1px solid #14ae46;
  border-radius: 50%;
  display: inline-block;
}

.zoom:active {
  background: #029740;
  border: 1px solid #128435;
}

.zoom:active .zoombutton {
  color: #003107;
}

.zoombutton {
  color: #006519;
  visibility: hidden;
  cursor: default;
}

.content {
  background-color: #f7f7f7;
}

/* window END */

/* content BEGIN */

h3 {
  margin-top: 0px;
}

/* content END */

